# sausau_projekat

./: .gitignore  README.md  app.py  main.py  pyproject.toml  ui.py
analysis/: best_thresholds.csv  diagnostic_overfitting.csv  feature_importance_report.txt  feature_selection_performance.csv  gradient_boosting_feature_importance.csv  kom.txt  logistic_regression_feature_importance.csv  metrics_comparison.csv  metrics_comparison_2.csv  metrics_table.txt  model_ranking_default.csv  random_forest_feature_importance.csv  ranking_by_f2_analysis.csv  threshold_comparison.csv  top10_vs_top20_vs_all_performance.csv
analysis_SMOTE_employment/: kom.txt  metrics_comparison_2.csv  metrics_table.txt
analysis_SMOTE_employment_Kfold/: kom.txt  metrics_comparison_2.csv  metrics_table.txt
analysis_SMOTE_emplyment+euborium/: kom.txt  metrics_comparison_2.csv  metrics_table.txt
analysis_bezSMOTE_employment+euborium/: kom.txt  metrics_comparison_2.csv  metrics_table.txt
analysis_bez_week/: diagnostic_overfitting.csv  feature_importance_analysis.txt  kom.txt  metrics_comparison.csv  metrics_comparison_2.csv  metrics_table.txt  metrike_bezSMOTE.txt  rf_feature_importance.csv
analysis_dobar/: hiperparametri.csv  metrics_table.txt
data/: bank-additional-test.csv
data/processed/: X_test_preprocessed.npy  X_val_preprocessed.npy  bank-additional-cleaned.csv  bank-additional-test.csv  bank-additional-train.csv  (+6 more)
models/: metrics_comparison.csv
src/: EDA.py  analiza.py  analysis.py  eda_stara.py  feature.py  feature_importance_analysis.py  preprocessing.py  train.py  train_SMOTE.py
