[project]
name = "sausau-projekat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "imbalanced-learn>=0.13.0",
    "joblib>=1.5.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "numpy>=2.0.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "uvicorn>=0.34.0",
]
